Fix styles for when the search/sort area wraps

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -167,7 +167,7 @@ input, textarea {
 }
 
 .App-searchbar {
-  margin: 0 5px;
+  margin: 0 5px 10px 5px;
 }
 
 .App-memberCard h1 {
